Ändrar rubriken på sidan samt ändrar transitiontiden

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                    <p>2017-10-10</p>
                </section>
                <section class="project-item item6">
-                   <a href="projects/a-future-project/index.html">Mix It Up</a>
+                   <a href="projects/a-future-project/index.html">Dropdown menu</a>
                    <p>2017-10-10</p>
                </section>
                <section class="project-item item7">
