test-sync med TE15 NVM

--- a/projects/dropdown-menu/index.html
+++ b/projects/dropdown-menu/index.html
@@ -24,6 +24,7 @@
                                    <li><a href="#">i5</a></li>
                                    <li><a href="#">i7</a></li>
                                    <li><a href="#">i9</a></li>
+                                   <li><a href="#">i11</a></li>
                                </ul>
                            </li>
                        </ul>
